--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "node-fetch": "2",
     "nodemon": "^2.0.22",
     "sharp": "^0.32.1",
+    "streamifier": "^0.1.1",
     "uid2": "^1.0.0",
     "uniqid": "^5.4.0"
   }
