--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "nodemon": "^2.0.22",
     "sharp": "^0.32.1",
     "uid2": "^1.0.0",
-    "uniqid": "^5.4.0"
+    "uniqid": "^5.4.0",
+    "v2": "^0.0.3"
   }
 }
